// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toggleField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <label
        aria-disabled="false"
        class="uv_1hngnvm9 uv_1hngnvma uv_1hngnvmd"
        for="_r_0_"
      >
        <div
          class="uv_xf61n40 uv_xf61n41j uv_xf61n42d uv_xf61n45d"
        />
        <div
          class="uv_1hngnvm0 uv_1hngnvm1 uv_1hngnvm3 uv_1hngnvm5"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            class="uv_1hngnvm8"
            id="_r_0_"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </form>
  </div>
</DocumentFragment>
`;

exports[`toggleField > should render correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <label
        aria-disabled="false"
        class="uv_1hngnvm9 uv_1hngnvma uv_1hngnvmd"
        for="_r_8_"
      >
        <div
          class="uv_xf61n40 uv_xf61n41j uv_xf61n42d uv_xf61n45d"
        />
        <div
          class="uv_1hngnvm0 uv_1hngnvm1 uv_1hngnvm3 uv_1hngnvm5"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            checked=""
            class="uv_1hngnvm8"
            id="_r_8_"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </form>
  </div>
</DocumentFragment>
`;

exports[`toggleField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <label
        aria-disabled="true"
        class="uv_1hngnvm9 uv_1hngnvmb uv_1hngnvmd"
        for="_r_4_"
      >
        <div
          class="uv_xf61n40 uv_xf61n41j uv_xf61n42d uv_xf61n45d"
        />
        <div
          class="uv_1hngnvm0 uv_1hngnvm2 uv_1hngnvm3 uv_1hngnvm5"
        >
          <input
            aria-disabled="true"
            aria-invalid="false"
            class="uv_1hngnvm8"
            disabled=""
            id="_r_4_"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </form>
  </div>
</DocumentFragment>
`;

exports[`toggleField > should render correctly with label and checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <label
        aria-disabled="false"
        class="uv_1hngnvm9 uv_1hngnvma uv_1hngnvmd"
        for="_r_c_"
      >
        <div
          class="uv_xf61n40 uv_xf61n41j uv_xf61n42d uv_xf61n45d"
        >
          <div
            class="uv_1w3vbem0 uv_1w3vbemd uv_1w3vbem2j"
            style="--uv_85qyp70: auto 1fr; --uv_85qyp71: auto 1fr; --uv_85qyp72: auto 1fr; --uv_85qyp73: auto 1fr; --uv_85qyp74: auto 1fr; --uv_85qyp75: auto 1fr;"
          >
            <span
              class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
              for="_r_c_"
            >
              test
            </span>
          </div>
        </div>
        <div
          class="uv_1hngnvm0 uv_1hngnvm1 uv_1hngnvm3 uv_1hngnvm5"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            checked=""
            class="uv_1hngnvm8"
            id="_r_c_"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </form>
  </div>
</DocumentFragment>
`;
